@@ -2284,3 +2284,4 @@ INSERT INTO elements_programmes SET cycle='4', matiere='Technologie', rubrique='
 INSERT INTO elements_programmes SET cycle='4', matiere='Technologie', rubrique='S\'approprier des outils et des méthodes', item='Présenter à l\'oral et à l\'aide de supports numériques multimédia des solutions techniques au moment des revues de projet.', resume='Présenter numériquement à l\'oral des solutions';
 INSERT INTO elements_programmes SET cycle='4', matiere='Technologie', rubrique='S\'approprier des outils et des méthodes', item='Traduire, à l\'aide d\'outils de représentation numérique, des choix de solutions sous forme de croquis, de dessins ou de schémas.', resume='Traduire avec des outils numériques des choix de solutions';
 INSERT INTO droits SET id='/lib/calendrier_crob.php', administrateur='V', professeur='V', cpe='V', scolarite='V', eleve='V', responsable='V', secours='F', autre='F', description='Calendrier', statut='';
+INSERT INTO droits SET id='/mod_discipline/extraire_pointages.php', administrateur='V', professeur='V', cpe='V', scolarite='V', eleve='F', responsable='F', secours='F', autre='F', description='Discipline: Pointages petits incidents: Extraction', statut='';
